Added all of the links so that they are working

--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -10,8 +10,10 @@
 <% @destination.attractions.each do |a| %>
 	<%= link_to a.name, destination_attraction_path(a.destination_id, a.id)%>
 
-<%= link_to 'new attraction', new_destination_attraction_path(a.destination.id) %>
+    
 <%end%>
+
+<%= link_to 'new attraction', new_destination_attraction_path(@destination) %>
 
 <h3><%= link_to 'Edit', edit_destination_path(@destination) %></h3>
 <h3><%= link_to 'Back', destinations_path %></h3>
