--- a/app/views/attractions/_form.html.erb
+++ b/app/views/attractions/_form.html.erb
@@ -1,15 +1,4 @@
-<%= form_for(@attraction) do |f| %>
- <!--  <% if @attraction.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@attraction.errors.count, "error") %> prohibited this attraction from being saved:</h2>
-
-      <ul>
-      <% @attraction.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %> -->
+<%= form_for(@attraction, :url => destination_attractions_path(@attraction.destination)) do |f| %>
 
   <div class="field">
     <br><%= f.label :name %>
@@ -28,9 +17,10 @@
     <%= f.text_field :longitude %><br />
 
   </div>
-  </div>
+  
 
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
